--- a/TestApplication/app/src/main/res/values/colors.xml
+++ b/TestApplication/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="white">#FFFFFF</color>
     <color name="teal_200">#80CBC4</color>
     <color name="teal_700">#00796B</color>
+    <color name="app_background_gray">#C0C0C0</color>
+    <color name="btn_background_gray">#808080</color>
 </resources>
