--- a/ResearchRobot/app/src/main/res/layout/activity_main.xml
+++ b/ResearchRobot/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,49 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<?xml version = "1.0" encoding = "utf-8"?>
+<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:tools = "http://schemas.android.com/tools"
+    android:layout_width = "match_parent"
+    android:layout_height = "match_parent"
+    android:layout_margin = "16dp"
+    tools:context = ".MainActivity">
 
-    <TextView
-        android:id="@+id/msg"
-        android:layout_width="188dp"
-        android:layout_height="174dp"
-        android:text="Hello World!"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/etIP"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/etIP_hint"
+        android:inputType="text"
+        android:autofillHints="" />
 
     <Button
-        android:id="@+id/search"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnConnect"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="27dp" />
+        android:layout_below="@+id/etIP"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:text="@string/btnConnect_hint" />
+    <TextView
+        android:id = "@+id/tvMessages"
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:layout_above = "@+id/etMessage"
+        android:layout_below = "@+id/btnConnect"
+        android:inputType = "textMultiLine"
+        android:textAppearance = "@style/Base.TextAppearance.AppCompat.Medium" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/etMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnSend"
+        android:hint="@string/etMessage_hint"
+        android:inputType="text"
+        android:autofillHints="" />
+
+    <Button
+        android:id="@+id/btnSend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="@string/btnSend_hint" />
+</RelativeLayout>
