--- a/ResearchRobot/app/src/main/res/values/integer.xml
+++ b/ResearchRobot/app/src/main/res/values/integer.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name = "serverPort">8080</integer>
+    <integer name="SERVER_PORT">8080</integer>
 </resources>
