--- a/BluetoothRobot/app/src/main/res/layout/activity_main.xml
+++ b/BluetoothRobot/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,20 @@
         android:layout_gravity = "center"
         android:layout_marginTop = "16dp"
         android:text = "@string/btnConnect_text" />
+    <Button
+        android:id = "@+id/btnClose"
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:layout_below = "@+id/btnConnect"
+        android:layout_gravity = "center"
+        android:layout_marginTop = "16dp"
+        android:text = "@string/btnClose_text" />
     <TextView
         android:id = "@+id/tvMessages"
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:layout_above = "@+id/etMessage"
-        android:layout_below = "@+id/btnConnect"
+        android:layout_below = "@+id/btnClose"
         android:scrollbars = "vertical"
         android:gravity = "bottom"
         android:textAppearance = "@style/Base.TextAppearance.AppCompat.Medium" />
