--- a/BluetoothRobot/app/src/main/res/layout/activity_main.xml
+++ b/BluetoothRobot/app/src/main/res/layout/activity_main.xml
@@ -6,43 +6,63 @@
     android:layout_height = "match_parent"
     android:layout_margin = "16dp"
     tools:context = ".MainActivity">
+
     <Button
-        android:id = "@+id/btnConnect"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:layout_gravity = "center"
-        android:layout_marginTop = "16dp"
-        android:text = "@string/btnConnect_text" />
+        android:id="@+id/btnConnect"
+        android:layout_width="168dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/btnConnect_text" />
+
     <Button
-        android:id = "@+id/btnClose"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:layout_below = "@+id/btnConnect"
-        android:layout_gravity = "center"
-        android:layout_marginTop = "16dp"
-        android:text = "@string/btnClose_text" />
+        android:id="@+id/btnClose"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toEndOf="@+id/btnConnect"
+        android:text="@string/btnClose_text" />
+
     <TextView
-        android:id = "@+id/tvMessages"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:layout_above = "@+id/etMessage"
-        android:layout_below = "@+id/btnClose"
-        android:scrollbars = "vertical"
-        android:gravity = "bottom"
-        android:textAppearance = "@style/Base.TextAppearance.AppCompat.Medium" />
+        android:id="@+id/tvMessages"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_above="@+id/etMessage"
+        android:layout_below="@+id/btnConnect"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:gravity="bottom"
+        android:scrollbars="vertical"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <EditText
         android:id="@+id/etMessage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="46dp"
         android:layout_above="@+id/btnSend"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
         android:autofillHints="true"
         android:hint="@string/etMessage_hint"
-        android:inputType="text" />
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:textColorHint="#757575" />
+
     <Button
-        android:id = "@+id/btnSend"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:layout_alignParentBottom = "true"
-        android:text = "@string/btnSend_text" />
+        android:id="@+id/btnSend"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:text="@string/btnSend_text" />
 </RelativeLayout>
