--- a/BluetoothRobot/app/src/main/res/layout/activity_main.xml
+++ b/BluetoothRobot/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <Button
         android:id="@+id/btnConnect"
-        android:layout_width="168dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -22,18 +22,26 @@
         android:id="@+id/btnClose"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/btnConnect"
         android:text="@string/btnClose_text" />
+
+    <Button
+        android:id="@+id/btnSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toEndOf="@+id/btnClose"
+        android:text="@string/btnSwitch_text" />
 
     <TextView
         android:id="@+id/tvMessages"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_above="@+id/etMessage"
-        android:layout_below="@+id/btnConnect"
+        android:layout_below="@+id/btnClose"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         android:gravity="bottom"
@@ -43,7 +51,7 @@
     <EditText
         android:id="@+id/etMessage"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_above="@+id/btnSend"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="0dp"
@@ -57,7 +65,7 @@
     <Button
         android:id="@+id/btnSend"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
