--- a/kobuki/app/src/main/res/values/styles.xml
+++ b/kobuki/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <style name="Widget.Theme.MyApplication.MyView" parent="">
-        <item name="android:background">@color/gray_400</item>
+        <item name="android:background">@color/white</item>
         <item name="exampleColor">@color/light_blue_400</item>
     </style>
 </resources>
