--- a/kobuki/app/src/main/res/layout/activity_main.xml
+++ b/kobuki/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,23 @@
         android:id="@+id/joystickView"
         android:layout_width="432dp"
         android:layout_height="308dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sensorPanel" />
+        app:layout_constraintTop_toBottomOf="@+id/btnClose" />
 
     <TextView
         android:id="@+id/sensorPanel"
         android:layout_width="347dp"
         android:layout_height="197dp"
+        android:layout_marginBottom="28dp"
         android:lines="3"
         android:text="TextView"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnClose"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/msg"
@@ -62,7 +63,7 @@
         android:id="@+id/btnClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="252dp"
         android:text="@string/close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
