--- a/BluetoothRobot/app before merge/src/main/res/layout/activity_main.xml
+++ b/BluetoothRobot/app before merge/src/main/res/layout/activity_main.xml
@@ -22,9 +22,31 @@
         android:id="@+id/btnClose"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginStart="144dp"
+        android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/btnConnect"
         android:text="@string/btnClose_text" />
+
+    <Button
+        android:id="@+id/btnSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toEndOf="@+id/btnClose"
+        android:text="@string/btnSwitch_text" />
+
+    <TextView
+        android:id="@+id/tvMessages"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_above="@+id/etMessage"
+        android:layout_below="@+id/btnClose"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:gravity="bottom"
+        android:scrollbars="vertical"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <EditText
         android:id="@+id/etMessage"
@@ -51,17 +73,4 @@
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
         android:text="@string/btnSend_text" />
-
-    <FrameLayout
-        android:id="@+id/frame"
-        android:layout_width="332dp"
-        android:layout_height="473dp"
-        android:layout_above="@+id/etMessage"
-        android:layout_below="@+id/btnConnect"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="35dp"></FrameLayout>
 </RelativeLayout>
