--- a/BluetoothRobot/app/src/main/res/layout/activity_main.xml
+++ b/BluetoothRobot/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,46 @@
     android:layout_margin = "16dp"
     tools:context = ".MainActivity">
 
+    <FrameLayout
+        android:id="@+id/controlFrame"
+        android:background="@color/red"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_above="@+id/chartFrame"
+        android:layout_below="@+id/btnConnect"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="163dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toStartOf="@+id/otherFrame">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/otherFrame"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_below="@+id/btnClose"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="164dp"
+        android:layout_marginEnd="0dp">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/chartFrame"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_above="@+id/etMessage"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="20dp"
+        android:layout_toStartOf="@+id/skeletonFrame">
+
+    </FrameLayout>
+
     <Button
         android:id="@+id/btnConnect"
         android:layout_width="wrap_content"
@@ -53,15 +93,14 @@
         android:text="@string/btnSend_text" />
 
     <FrameLayout
-        android:id="@+id/frame"
-        android:layout_width="290dp"
-        android:layout_height="290dp"
+        android:id="@+id/skeletonFrame"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_above="@+id/etMessage"
-        android:layout_below="@+id/btnConnect"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="125dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="126dp"></FrameLayout>
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="20dp" />
+
 </RelativeLayout>
