--- a/BluetoothRobot/app/src/main/res/layout/activity_main.xml
+++ b/BluetoothRobot/app/src/main/res/layout/activity_main.xml
@@ -9,43 +9,54 @@
 
     <FrameLayout
         android:id="@+id/controlFrame"
-        android:background="@color/red"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_above="@+id/chartFrame"
+        android:layout_width="280dp"
+        android:layout_height="320dp"
         android:layout_below="@+id/btnConnect"
         android:layout_alignParentStart="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="163dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_toStartOf="@+id/otherFrame">
+        android:layout_toStartOf="@+id/otherFrame"
+        android:background="@color/red">
 
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/otherFrame"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="280dp"
+        android:layout_height="320dp"
         android:layout_below="@+id/btnClose"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="164dp"
-        android:layout_marginEnd="0dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="0dp"
+        android:background="@color/blue">
 
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/chartFrame"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="280dp"
+        android:layout_height="320dp"
         android:layout_above="@+id/etMessage"
         android:layout_alignParentStart="true"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="20dp"
-        android:layout_toStartOf="@+id/skeletonFrame">
+        android:layout_toStartOf="@+id/skeletonFrame"
+        android:background="@color/green">
 
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/skeletonFrame"
+        android:layout_width="280dp"
+        android:layout_height="320dp"
+        android:layout_above="@+id/etMessage"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/yellow" />
 
     <Button
         android:id="@+id/btnConnect"
@@ -62,8 +73,8 @@
         android:id="@+id/btnClose"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginStart="144dp"
-        android:layout_toEndOf="@+id/btnConnect"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="1dp"
         android:text="@string/btnClose_text" />
 
     <EditText
@@ -91,16 +102,5 @@
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
         android:text="@string/btnSend_text" />
-
-    <FrameLayout
-        android:id="@+id/skeletonFrame"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_above="@+id/etMessage"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="20dp" />
 
 </RelativeLayout>
