--- a/BluetoothRobot/app/src/main/res/values/colors.xml
+++ b/BluetoothRobot/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#F0FF0000</color>
+    <color name="blue">#F00000FF</color>
+    <color name="green">#F000FF00</color>
+    <color name="yellow">#F0FFFF00</color>
 </resources>
